---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: ????
  Bugfixes:
    - Fixed that several ore refining icons were improperly reskinned when materials added by Bob's Metal's, Chemicals and Intermediates or alternatively Angel's Industries were not present
    - Fixed that the liquefier animation was not playing
    - Fixed startup error when playing with Omni Compression related to the ore flotation cell recipes
    - Fixed that lead and tin plate recipe icons for direct smelting were not reskinned when Angel's Smelting was not enabled
  Locale:
    - Corrected all references to improper spelling "liquifier", relating to the liquefier
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2021-09-29
  Features:
    - Updated crystallizer, ore crusher, ore flotation cell, ore sorting facility, ore refinery, hydro plant, salination plant, and clarifier with high resolution sprites
  Locale:
    - Corrected references to improper spelling "floatation", relating to the ore flotation cell
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2021-09-12
  Changes:
    - Revised Algae farm progression tiering when Sea Block 0.5.5 or later is enabled
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2021-08-14
  Features:
    - Revisions to all color masks for all entities, items, and icons are ongoing
    - Perceived brightness and contrast have been improved and oversaturation and color blowouts have been reduced for revised entities
    - Added progression tier adjustments when used with Sea Block for the chemical plants
    - Added numeral icons to the mud washing process recipes
  Changes: